css formatting, fix buttons spacing

--- a/app/assets/stylesheets/application.tailwind.css
+++ b/app/assets/stylesheets/application.tailwind.css
@@ -11,7 +11,6 @@
 
 */
 
-
 .pagy {
   display: flex;
 }
@@ -59,7 +58,8 @@
   color: rgb(209 213 219);
 }
 
-.pagy .pagy-combo-input, .pagy.pagy-items-selector-js {
+.pagy .pagy-combo-input,
+.pagy.pagy-items-selector-js {
   white-space: nowrap;
   display: inline-block;
   border-radius: 0.5rem;
@@ -67,11 +67,12 @@
   padding: 0.125rem 0.75rem;
 }
 
-.pagy .pagy-combo-input input, .pagy.pagy-items-selector-js input {
+.pagy .pagy-combo-input input,
+.pagy.pagy-items-selector-js input {
   line-height: 1.5rem;
   border-radius: 0.375rem;
   border-style: none;
   background-color: rgb(243 244 246);
 }
 
-@import 'actiontext.css';
+@import "actiontext.css";
